cmake_minimum_required(VERSION 3.20)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(leetcode main.cpp)

add_executable(yong-liang-ge-zhan-shi-xian-dui-lie-lcof src/leetcode/editor/cn/yong-liang-ge-zhan-shi-xian-dui-lie-lcof.cpp)
add_executable(fei-bo-na-qi-shu-lie-lcof src/leetcode/editor/cn/fei-bo-na-qi-shu-lie-lcof.cpp)
add_executable(shu-zu-zhong-zhong-fu-de-shu-zi-lcof src/leetcode/editor/cn/shu-zu-zhong-zhong-fu-de-shu-zi-lcof.cpp)
add_executable(er-wei-shu-zu-zhong-de-cha-zhao-lcof src/leetcode/editor/cn/er-wei-shu-zu-zhong-de-cha-zhao-lcof.cpp)
add_executable(qing-wa-tiao-tai-jie-wen-ti-lcof src/leetcode/editor/cn/qing-wa-tiao-tai-jie-wen-ti-lcof.cpp)
add_executable(xuan-zhuan-shu-zu-de-zui-xiao-shu-zi-lcof src/leetcode/editor/cn/xuan-zhuan-shu-zu-de-zui-xiao-shu-zi-lcof.cpp)
add_executable(find-minimum-in-rotated-sorted-array src/leetcode/editor/cn/find-minimum-in-rotated-sorted-array.cpp)
add_executable(find-minimum-in-rotated-sorted-array-ii src/leetcode/editor/cn/find-minimum-in-rotated-sorted-array-ii.cpp)
add_executable(ju-zhen-zhong-de-lu-jing-lcof src/leetcode/editor/cn/ju-zhen-zhong-de-lu-jing-lcof.cpp)
add_executable(ti-huan-kong-ge-lcof src/leetcode/editor/cn/ti-huan-kong-ge-lcof.cpp)
add_executable(ji-qi-ren-de-yun-dong-fan-wei-lcof src/leetcode/editor/cn/ji-qi-ren-de-yun-dong-fan-wei-lcof.cpp)
add_executable(cong-wei-dao-tou-da-yin-lian-biao-lcof src/leetcode/editor/cn/cong-wei-dao-tou-da-yin-lian-biao-lcof.cpp)
add_executable(zhong-jian-er-cha-shu-lcof src/leetcode/editor/cn/zhong-jian-er-cha-shu-lcof.cpp)
add_executable(jian-sheng-zi-lcof src/leetcode/editor/cn/jian-sheng-zi-lcof.cpp)
add_executable(jian-sheng-zi-ii-lcof src/leetcode/editor/cn/jian-sheng-zi-ii-lcof.cpp)
add_executable(he-bing-liang-ge-pai-xu-de-lian-biao-lcof src/leetcode/editor/cn/he-bing-liang-ge-pai-xu-de-lian-biao-lcof.cpp)
add_executable(bao-han-minhan-shu-de-zhan-lcof src/leetcode/editor/cn/bao-han-minhan-shu-de-zhan-lcof.cpp)
add_executable(fan-zhuan-lian-biao-lcof src/leetcode/editor/cn/fan-zhuan-lian-biao-lcof.cpp)
add_executable(fu-za-lian-biao-de-fu-zhi-lcof src/leetcode/editor/cn/fu-za-lian-biao-de-fu-zhi-lcof.cpp)
add_executable(max-area-of-island src/leetcode/editor/cn/max-area-of-island.cpp)
add_executable(zuo-xuan-zhuan-zi-fu-chuan-lcof src/leetcode/editor/cn/zuo-xuan-zhuan-zi-fu-chuan-lcof.cpp)
add_executable(zai-pai-xu-shu-zu-zhong-cha-zhao-shu-zi-lcof src/leetcode/editor/cn/zai-pai-xu-shu-zu-zhong-cha-zhao-shu-zi-lcof.cpp)
add_executable(que-shi-de-shu-zi-lcof src/leetcode/editor/cn/que-shi-de-shu-zi-lcof.cpp)
add_executable(cong-shang-dao-xia-da-yin-er-cha-shu-ii-lcof src/leetcode/editor/cn/cong-shang-dao-xia-da-yin-er-cha-shu-ii-lcof.cpp)
add_executable(cong-shang-dao-xia-da-yin-er-cha-shu-lcof src/leetcode/editor/cn/cong-shang-dao-xia-da-yin-er-cha-shu-lcof.cpp)
add_executable(cong-shang-dao-xia-da-yin-er-cha-shu-iii-lcof src/leetcode/editor/cn/cong-shang-dao-xia-da-yin-er-cha-shu-iii-lcof.cpp)
add_executable(gu-piao-de-zui-da-li-run-lcof src/leetcode/editor/cn/gu-piao-de-zui-da-li-run-lcof.cpp)
add_executable(li-wu-de-zui-da-jie-zhi-lcof src/leetcode/editor/cn/li-wu-de-zui-da-jie-zhi-lcof.cpp)
add_executable(lian-xu-zi-shu-zu-de-zui-da-he-lcof src/leetcode/editor/cn/lian-xu-zi-shu-zu-de-zui-da-he-lcof.cpp)
add_executable(shu-de-zi-jie-gou-lcof src/leetcode/editor/cn/shu-de-zi-jie-gou-lcof.cpp)
add_executable(er-cha-shu-de-jing-xiang-lcof src/leetcode/editor/cn/er-cha-shu-de-jing-xiang-lcof.cpp)
add_executable(dui-cheng-de-er-cha-shu-lcof src/leetcode/editor/cn/dui-cheng-de-er-cha-shu-lcof.cpp)
add_executable(ba-shu-zi-fan-yi-cheng-zi-fu-chuan-lcof src/leetcode/editor/cn/ba-shu-zi-fan-yi-cheng-zi-fu-chuan-lcof.cpp)
add_executable(spiral-matrix-ii src/leetcode/editor/cn/spiral-matrix-ii.cpp)
add_executable(student-attendance-record-i src/leetcode/editor/cn/student-attendance-record-i.cpp)
add_executable(longest-common-prefix src/leetcode/editor/cn/longest-common-prefix.cpp)
add_executable(shu-zu-zhong-shu-zi-chu-xian-de-ci-shu-lcof src/leetcode/editor/cn/shu-zu-zhong-shu-zi-chu-xian-de-ci-shu-lcof.cpp)
add_executable(shu-zu-zhong-shu-zi-chu-xian-de-ci-shu-ii-lcof src/leetcode/editor/cn/shu-zu-zhong-shu-zi-chu-xian-de-ci-shu-ii-lcof.cpp)
add_executable(student-attendance-record-ii src/leetcode/editor/cn/student-attendance-record-ii.cpp)
add_executable(fibonacci-number src/leetcode/editor/cn/fibonacci-number.cpp)
add_executable(n-th-tribonacci-number src/leetcode/editor/cn/n-th-tribonacci-number.cpp)
add_executable(climbing-stairs src/leetcode/editor/cn/climbing-stairs.cpp)
add_executable(min-cost-climbing-stairs src/leetcode/editor/cn/min-cost-climbing-stairs.cpp)
add_executable(reverse-vowels-of-a-string src/leetcode/editor/cn/reverse-vowels-of-a-string.cpp)